refactoring fe and be
